// Версия ProtoBuf
syntax = "proto3";

// Текущий пакет - указывает пространство имен для сервиса и сообщений. Помогает избегать конфликтов имен.
package shop;

// Настройки для генерации Go кода.
option go_package = "pim-sys.proto.v1;proto";

service Shop {
  rpc NewShop (NewShopRequest) returns (NewShopResponse);
  rpc AlterShop (AlterShopRequest) returns (AlterShopResponse);
}

message NewShopRequest {
  string name = 1;
  string description = 2;
  string url = 3;
}

message NewShopResponse {
  string message = 1; 
  int32 shop_id = 2;
}

message AlterShopRequest {
  int32 shop_id = 1;
  NewShopRequest shop_info = 2;
}

message AlterShopResponse {
  string message = 1; // Auth token of the logged in user.
}